data/Java/09-use-undeclared-variable/1/[M]Error.txt
*https://www.geeksforgeeks.org/java-lang-class-class-java-set-1/
Test.java:4: error: cannot find symbol
        a = new A();
        ^